# Halide

./: Makefile
apps/example-project/: CMakeCache.txt  CMakeLists.txt  ExampleProject.cpp  Makefile  filter.cpp  viz.sh
apps/max_pool_layer/: CMakeLists.txt  Makefile  compare.sh  flow_max_pool.py  max_pool_layer_generator.cpp  process.cpp  torch_max_pool.py
src/: Bounds.cpp  CMakeLists.txt  IRMatch.h  IntervalMatch.h
